--- a/feladat1.html
+++ b/feladat1.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS alapok 1. feladat</title>
+    <script>
+        var a = 15;
+        var b = 12;
+    </script>
 </head>
 
 <body>
