változók értékének kiírása a konzolban

--- a/feladat1.html
+++ b/feladat1.html
@@ -9,6 +9,9 @@
         var a = 15;
         var b = 12;
         var c = a + b;
+        console.log("a = ", a);
+        console.log("b = ", b);
+        console.log("c = a + b = ", c);
     </script>
 </head>
 
