--- a/feladat2.html
+++ b/feladat2.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Alapok - 2. feladat</title>
+    <script>
+        var lista = [0, 7, 16, 30, 41];
+    </script>
 </head>
 
 <body>
