--- a/feladat2.html
+++ b/feladat2.html
@@ -7,6 +7,7 @@
     <title>JS Alapok - 2. feladat</title>
     <script>
         var lista = [0, 7, 16, 30, 41];
+        lista.forEach(item => { console.log(item); });
     </script>
 </head>
 
