--- a/feladat3.html
+++ b/feladat3.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Alapok - 3. feladat</title>
-    <script></script>
+    <script src="feladat03.js"></script>
 </head>
 
 <body>
